# mailpilot-ai

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  README.md  manage.py  pyproject.toml
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/models/: user.py
backend/apps/accounts/repositories/: user_repository.py
backend/apps/accounts/serializers/: __init__.py  authentication.py  user.py
backend/apps/accounts/services/: __init__.py  authentication_service.py  exceptions.py
backend/apps/accounts/tests/: test_authentication_api.py
backend/apps/common/: middleware.py
backend/apps/common/api/: serializers.py  urls.py  views.py
backend/apps/common/exceptions/: __init__.py  handler.py
backend/apps/common/models/: __init__.py  base.py
backend/apps/common/pagination/: __init__.py  page_number.py
backend/apps/common/permissions/: __init__.py  ownership.py
backend/apps/common/services/: __init__.py  health_service.py
backend/apps/common/tests/: test_api_foundation.py
backend/apps/common/utils/: __init__.py  logging.py
backend/apps/dashboard/: __init__.py
backend/apps/dashboard/repositories/: __init__.py  dashboard_repository.py
backend/apps/dashboard/serializers/: __init__.py  dashboard.py
backend/apps/dashboard/services/: __init__.py  dashboard_service.py
backend/apps/dashboard/tests/: test_dashboard_api.py
backend/apps/email_accounts/migrations/: 0001_initial.py
backend/apps/email_accounts/models/: __init__.py  email_account.py
backend/apps/email_accounts/repositories/: __init__.py  email_account_repository.py
backend/apps/email_accounts/serializers/: __init__.py  oauth.py
backend/apps/emails/filters/: __init__.py  (+1 more)
backend/apps/proactive_assistant/: __init__.py  admin.py  apps.py  enums.py  signals.py
backend/config/: api_v1_urls.py  celery.py  urls.py  wsgi.py
backend/config/asgi/: __init__.py
backend/config/routing/: __init__.py  websocket.py
backend/config/settings/: __init__.py  base.py  local.py  production.py  test.py
backend/mailpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+136 files in other folders)
