[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailpilot-backend"
version = "0.1.0"
description = "MailPilot AI backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "djangorestframework-simplejwt>=5.5,<6",
    "django-environ>=0.12,<0.13",
    "django-filter>=25.1,<26",
    "django-cors-headers>=4.7,<5",
    "drf-spectacular>=0.28,<0.29",
    "channels[daphne]>=4.2,<5",
    "channels-redis>=4.2,<5",
    "celery[redis]>=5.5,<6",
    "psycopg[binary,pool]>=3.2,<4",
    "whitenoise[brotli]>=6.9,<7",
    "cryptography>=44,<46",
    "google-api-python-client>=2.170,<3",
    "google-auth>=2.40,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-auth-httplib2>=0.2,<1",
    "openai>=1.82,<3",
    "httpx>=0.27,<1",
    "gunicorn>=23,<24",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.8,<8",
    "django-stubs[compatible-mypy]>=5.2,<6",
    "djangorestframework-stubs[compatible-mypy]>=3.16,<4",
    "factory-boy>=3.3,<4",
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --disable-warnings --reuse-db"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "DJ"]
ignore = ["F403", "F405"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
exclude = ["(^|/)tests/"]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
